<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="My Tasks"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/sign_btn_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:text="Sign Up" />

        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="25dp"
            android:text="LogIn" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_below="@+id/sign_btn_cont" />


    <LinearLayout
        android:id="@+id/add_all_btn_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:text="Add Task" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="25dp"
            android:text="All Tasks" />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/task_button_cont"
    android:layout_centerHorizontal="true"
    android:gravity="center">


    <Button
        android:id="@+id/settingsbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:text="Settings " />
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsbtn"
        android:layout_marginLeft="25dp"
        android:text="Logout" />




    ></LinearLayout>



    <LinearLayout
        android:id="@+id/task_button_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernamehomepage"
        android:layout_marginStart="2dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:id="@+id/TaskAbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Task A " />

        <Button
            android:id="@+id/TaskBbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="TaskB" />

        <Button
            android:id="@+id/taskCbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="taskC" />
    </LinearLayout>

    <TextView
        android:id="@+id/usernamehomepage"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_all_btn_cont"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="10dp"
        android:text="username"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>


</RelativeLayout>