<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".TaskDetailPage">

    <TextView
        android:id="@+id/detailpagetitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="Title "
        />
    <TextView
        android:id="@+id/detailpagestae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/detailpagetitle"
        android:text="state"

        />

    <TextView
        android:id="@+id/detaildescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="description "
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/detailpagestae"

        />



    <LinearLayout
        android:id="@+id/sign_btn_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detaildescription"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:orientation="vertical">



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/attatchedfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="attatched  file: "
            android:layout_marginBottom="10dp"

            android:visibility="invisible" />

        <TextView
            android:id="@+id/attatchedFilecontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="attachedfile"
            android:autoLink="web"

            android:visibility="invisible" />

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/imageView"
            android:text="Delete Task"
            />


    </LinearLayout>


</RelativeLayout>